--- a/webdir/index.html
+++ b/webdir/index.html
@@ -12,6 +12,20 @@
 </head>
 
 <body>
+  <div class="container">
+    <form>
+        <div class="form-group">
+          <label>投稿者</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="form-group">
+          <label>投稿内容</label>
+          <textarea class="form-control" rows="3" id="message" placeholder="投稿内容を入力してください"></textarea>
+        </div>
+        <button type="button" class="btn btn-primary">投稿</button>
+    </form>
+  </div>
+
   <div class="container" id="keijiban">
     <h1>一覧画面</h1>
     <div class="card" v-for="card in cardlist">
@@ -30,7 +44,7 @@
     </div>
     <br>
 
-    <button type="button" class="btn btn-primary">投稿</button>
+
 
   </div>
 
