HTML側投稿日を取得して表示するようにしました。

--- a/webdir/index.html
+++ b/webdir/index.html
@@ -22,7 +22,7 @@
         <blockquote class="blockquote mb-0">
           <p>{{card.body}}</p>
           <footer class="blockquote-footer">
-            <cite title="Source Title">投稿者:{{card.contributor}}　投稿日:</cite>
+            <cite title="Source Title">投稿者:{{card.contributor}}　投稿日:{{card.createdate}}</cite>
           </footer>
         </blockquote>
 
