--- a/webdir/index.html
+++ b/webdir/index.html
@@ -22,7 +22,7 @@
         <label>投稿内容</label>
         <textarea class="form-control" rows="3" id="message" v-model="message" placeholder="投稿内容を入力してください"></textarea>
       </div>
-      <button type="button" class="btn btn-primary" v-on:click="sample">投稿</button>
+      <button type="button" class="btn btn-primary" v-on:click="post">投稿</button>
     </form>
 
     <h1>一覧画面</h1>
@@ -69,7 +69,7 @@
           postedName: ''
         },
         methods: {
-          sample: function (event) {
+          post: function (event) {
             console.log({
               postedName: this.postedName,
               message: this.message
